URLコンストラクタの警告解決
Fix URL constructor warning